--- a/index.html
+++ b/index.html
@@ -5,16 +5,14 @@
     <title></title>
 </head>
 <body data-ng-app="myApp">
-<div class="container" data-ng-controller="mainCtrl">
-    <input type="text" data-ng-model="userName"> {{ userName }}
-    <ul>
-        <li data-ng-repeat="cust in customers | filter:userName | orderBy:'city' ">
-            {{ cust.name | uppercase }} - {{ cust.city | uppercase }}
-        </li>
-    </ul>
+<div>
+    <!--Placeholder for views-->
+    <div data-ng-view=""></div>
 </div>
-<script src="app/angular.min.js"></script>
+<script src="bower_components/angular/angular.min.js"></script>
+<script src="bower_components/angular-route/angular-route.min.js"></script>
 <script src="app/app.js"></script>
+<script src="app/configuration/routes.js"></script>
 <script src="app/controllers/controllers.js"></script>
 <script src="app/filters/filters.js"></script>
 <script src="app/services/services.js"></script>
